# granian-app-in-package

./: .gitignore  README.md  pyproject.toml
tests_app_in_package/test_app/: logic.py  main.py
